remove CONFIG_ZMK_PROCESSOR_AUTO_LAYER_MAX_EXCLUDED_POSITIONS
remove CONFIG_ZMK_PROCESSOR_AUTO_LAYER_MAX_EXCLUDED_POSITIONS

--- a/Kconfig
+++ b/Kconfig
@@ -4,7 +4,7 @@
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
-
+if ZMK_MOUSE
 if !ZMK_SPLIT || ZMK_SPLIT_ROLE_CENTRAL
 
 config ZMK_INPUT_PROCESSOR_AUTO_LAYER
@@ -12,20 +12,8 @@ config ZMK_INPUT_PROCESSOR_AUTO_LAYER
     default y
     depends on DT_HAS_ZMK_INPUT_PROCESSOR_AUTO_LAYER_ENABLED
 
-if ZMK_INPUT_PROCESSOR_AUTO_LAYER
-config ZMK_PROCESSOR_AUTO_LAYER_MAX_EXCLUDED_POSITIONS
-    int "Maximum number of excluded positions"
-    default 8
-    range 1 32
-    help
-        Maximum number of key positions that can be excluded from
-        triggering auto layer deactivation. Each position requires
-        a 32-bit value in memory, so keep this reasonable for your
-        keyboard's resources.
-
-endif # ZMK_PROCESSOR_AUTO_LAYER
-
 endif # !ZMK_SPLIT || ZMK_SPLIT_ROLE_CENTRAL
+endif
 
 
 
